# banya

./: .gitignore  Cargo.toml
crates/banya-plugin/: Cargo.toml
crates/banya-plugin/examples/echo/: Cargo.toml  lib.rs
crates/banya-plugin/examples/get-time/: Cargo.toml  lib.rs
crates/banya-plugin/examples/print-time/: Cargo.toml  lib.rs
crates/banya-plugin/src/: lib.rs
crates/banya-plugin/wit/: plugin.wit
examples/: display-time.json  native-functions-demo.json  time-report.json
src/: args.rs  bindings.rs  instruction.rs  lib.rs  main.rs
src/builtin/: mod.rs  registry.rs
src/builtin/logical/: mod.rs
src/instruction/: mod.rs  model.rs
