[package]
name = "banya"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasmtime = { version = "43.0.0", features = ["component-model"] }
wasmtime-wasi = "43.0.0"


[workspace]
members = [
    "crates/banya-plugin",
    "crates/banya-plugin/examples/echo",
    "crates/banya-plugin/examples/get-time",
    "crates/banya-plugin/examples/print-time",
]

[workspace.dependencies]
wit-bindgen = "0.54"
