[package]
name = "banya"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
wasmtime = { version = "43.0.0", features = ["component-model"] }
wasmtime-wasi = "43.0.0"


[workspace]
members = [
    "crates/banya-plugin",
    "crates/banya-plugin/examples/echo",
    "crates/banya-plugin/examples/get-time",
    "crates/banya-plugin/examples/print-time",
]

[workspace.dependencies]
wit-bindgen = "0.54"
serde_json = { version = "1.0", default-features = false, features = ["std"]}
